--- a/security_tester/requirements.txt
+++ b/security_tester/requirements.txt
@@ -1,1 +1,10 @@
 
+selenium==4.15.2
+requests==2.31.0
+stem==1.8.2
+flask==3.0.0
+beautifulsoup4==4.12.2
+python-telegram-bot==20.3
+pyvirtualdisplay==3.0
+fake-useragent==1.3.0
+python-dotenv==1.0.0
